login or register page design

--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -1,9 +1,47 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-card class=".ion-margin-top" style="
+margin-top: 100px; padding-bottom: 20px;">
+  
+  <ion-header class="ion-no-border">
+    <ion-toolbar>
+      <ion-title class="ion-text-center">Register</ion-title>
+    </ion-toolbar>
+  
+  </ion-header>
 
-<ion-content>
+  <ion-item>
+    <ion-label>Seller Name:</ion-label>
+    <ion-input placeholder="Enter Input"></ion-input>
+  </ion-item>
 
-</ion-content>
+  <ion-item>
+    <ion-label>Business Name:</ion-label>
+    <ion-input placeholder="Enter Input"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Business Type(Grocery store, Garments) </ion-label>
+    <ion-input placeholder="Enter Input"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Enter your Whatsapp Name:</ion-label>
+    <ion-input placeholder="Enter Input"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Store Location:</ion-label>
+    <ion-input placeholder="Enter Input"></ion-input>
+  </ion-item>
+ 
+  <ion-button  href="#" style="
+  /* padding-top: 15px; */
+  margin-top: 30px;
+  margin-left: 110px;
+">Register</ion-button>
+
+<ion-input  style="margin-left: 110px;">I have an account</ion-input>
+<ion-input style="margin-left: 140px;
+color: rgb(92, 92, 228); font-weight: bold;">Login</ion-input>
+
+
+</ion-card>
