--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,9 +1,28 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-card class=".ion-margin-top" style="
+margin-top: 150px; padding-bottom: 20px;">
+  
+  <ion-header class="ion-no-border">
+    <ion-toolbar>
+      <ion-title class="ion-text-center">Login</ion-title>
+    </ion-toolbar>
+  
+  </ion-header>
 
-<ion-content>
+  <ion-item>
+    <ion-label>Mobile no:</ion-label>
+    <ion-input placeholder="Enter Number"></ion-input>
+  </ion-item>
 
-</ion-content>
+ 
+  <ion-button  href="#" style="
+  /* padding-top: 15px; */
+  margin-top: 30px;
+  margin-left: 120px;
+">Login</ion-button>
+
+<ion-input  style="margin-left: 90px;">Don't have an account</ion-input>
+<ion-input style="margin-left: 130px;
+color: rgb(92, 92, 228); font-weight: bold;">Register</ion-input>
+
+
+</ion-card>
