--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,3 +1,11 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+      Products
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content [fullscreen]="true">
 <ion-card class=".ion-margin-top" style="
 margin-top: 150px; padding-bottom: 20px;">
   
@@ -9,7 +17,7 @@ margin-top: 150px; padding-bottom: 20px;">
   </ion-header>
 
   <ion-item>
-    <ion-label>Mobile no:</ion-label>
+    <ion-label position="floating">Mobile no:</ion-label>
     <ion-input placeholder="Enter Number"></ion-input>
   </ion-item>
 
@@ -26,3 +34,5 @@ color: rgb(92, 92, 228); font-weight: bold;">Register</ion-input>
 
 
 </ion-card>
+</ion-content>
+
