--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,27 @@
-<ion-header [translucent]="true">
+<ion-header translucent>
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-title>Order</ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-segment value="pending" (ionChange)="segmentChanged($event)">
+      <ion-segment-button value="pending">
+        <ion-label>Pending</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="active">
+        <ion-label>Active</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="deliver">
+        <ion-label>Deliver</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="cancel">
+        <ion-label>Cancell</ion-label>
+      </ion-segment-button>
+   
+    </ion-segment>
+   
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+ 
+  
 </ion-content>
