--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,3 +1,4 @@
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
@@ -5,88 +6,21 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12">
-        <ion-item>
-          <ion-label position="floating">Product Name</ion-label>
-          <ion-input></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">
-        <ion-item>
-          <ion-label position="floating">Product Description</ion-label>
-          <ion-textarea></ion-textarea>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4">
-        <ion-item>
-          <ion-label position="floating">Product MRP</ion-label>
-          <ion-input type="number"></ion-input>
-        </ion-item>
-      </ion-col>
-     
-      <ion-col size="8">
-        <ion-item>
-          <ion-checkbox checked color="primary"></ion-checkbox>
-          <ion-label class="ion-padding-start">  Any Discount on Product ? </ion-label>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="6">
-        <ion-item>
-          <ion-label position="floating">Quantity</ion-label>
-          <ion-input></ion-input>
-        </ion-item> 
-      </ion-col>
-      <ion-col size="6">
-        <ion-item>
-          <ion-label position="floating">Discounted Price</ion-label>
-          <ion-input></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="6">
-        <ion-item>
-          <ion-label position="floating">Category</ion-label>
-          <ion-input></ion-input>
-        </ion-item> 
-      </ion-col>
-      <ion-col size="6">
-        <ion-item>
-          <ion-label position="floating">unit</ion-label>
-          <ion-input></ion-input>
-        </ion-item> 
-      </ion-col>
-     
-    </ion-row>
-    <ion-row>
-      <ion-col size="6">
-        <ion-item>
-          <ion-label position="floating">Add Images</ion-label>
-          <ion-input type="file"></ion-input>
-        </ion-item> 
-      </ion-col>
-      <ion-col size="6">
-        <ion-item>
-          <!-- <ion-label position="floating">Add Images</ion-label>
-          <ion-input type="file"></ion-input> -->
-          <input type="file" name="uploadfile" id="img" style="display:none;"/>
-        <label for="img">Click me to upload image</label>
-        </ion-item> 
-      </ion-col>
-     
-    </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-button shape="round" fill="outline">Add Product</ion-button>
-    </ion-row>
-    </ion-grid>
+  <ion-segment value="active" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="active">
+      <ion-label>Active</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="inactive">
+      <ion-label>Inactive</ion-label>
+    </ion-segment-button>
+  
+ 
+  </ion-segment>
+  <!-- fab placed to the bottom end -->
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button  [routerLink]="['/add-product']">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
