--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,27 +3,27 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="home-sharp"></ion-icon>
-    
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="bag-handle-sharp"></ion-icon>
-     
+      <ion-label>Orders</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="add-circle-sharp"></ion-icon>
-      <!-- <ion-label>Tab 3</ion-label> -->
+      <ion-label>Products</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
       <ion-icon name="chatbubbles-sharp"></ion-icon>
-      <!-- <ion-label>Tab 4</ion-label> -->
+      <ion-label>Chat</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
       <ion-icon  name="settings-sharp"></ion-icon>
-     
+      <ion-label>Settings</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
