otp or profile page design

--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -1,9 +1,57 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tab5</ion-title>
+    <ion-title>Myprofile</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-grid>
+  <ion-row>
+    <ion-col>
+      <ion-avatar>
+        <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" style="    margin-left: 130px;"/>
+      </ion-avatar>
+    </ion-col>
+    </ion-row>
+    <ion-row>
+    <ion-title class="ion-text-center">Riya Gupta
+      <ion-input type="number" value="9462594965" style="font-size: small; color: rgb(92, 92, 228);"></ion-input>
+    </ion-title>
+    
+      <ion-item>
+        <ion-label  position="floating">Payments</ion-label>
+        <ion-input placeholder="Enter Input"></ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label  position="floating">Delivery Charges</ion-label>
+        <ion-input placeholder="Enter Input"></ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label  position="floating">Change Languages </ion-label>
+        <ion-input placeholder="Enter Input"></ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label  position="floating">Feedback</ion-label>
+        <ion-input placeholder="Enter Input"></ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label  position="floating">Manage Categories</ion-label>
+        <ion-input placeholder="Enter Input"></ion-input>
+      </ion-item>
 
-</ion-content>
+      <ion-item>
+        <ion-label  position="floating">Support</ion-label>
+        <ion-input placeholder="Enter Input"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label  position="floating">Logout</ion-label>
+        <ion-input placeholder="Enter Input"></ion-input>
+      </ion-item>
+
+  
+  </ion-row>
+</ion-grid>
