--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -22,11 +22,11 @@ margin-top: 150px; padding-bottom: 20px;">
   </ion-item>
 
  
-  <ion-button  href="#" style="
+  <ion-button style="
   /* padding-top: 15px; */
   margin-top: 30px;
   margin-left: 120px;
-">Login</ion-button>
+" [routerLink]="['/otp']">Send OTP</ion-button>
 
 <ion-input  style="margin-left: 90px;">Don't have an account</ion-input>
 <ion-input style="margin-left: 130px;
