--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,11 +1,54 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Products
+      Login
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
+  <ion-card>
+    <ion-avatar class="ion-text-center">
+      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" />
+    </ion-avatar>
+    <ion-card-header>
+     
+      <ion-card-title class="ion-text-center">LOGIN</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">
+               Email
+              </ion-label>
+              <ion-input></ion-input>
+                <ion-icon slot="end" name="mail-outline" class="ion-margin-top"></ion-icon>
+            </ion-item>
+           </ion-col>
+        </ion-row>
+        <ion-row>
+        
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password"  #mysecretpassword>
+              </ion-input>
+              <ion-icon slot="end" name="eye-outline" #eye class="ion-margin-top"
+             (click)="togglePassword(mysecretpassword,eye)"></ion-icon>
+            </ion-item>
+         </ion-col>
+        </ion-row>
+        <ion-row>
+          <io-col>
+            
+          </io-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+<!-- <ion-content [fullscreen]="true">
 <ion-card class=".ion-margin-top" style="
 margin-top: 150px; padding-bottom: 20px;">
   
@@ -34,5 +77,5 @@ color: rgb(92, 92, 228); font-weight: bold;">Register</ion-input>
 
 
 </ion-card>
-</ion-content>
+</ion-content> -->
 
