--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,21 +1,27 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="primary">
+  <!-- <ion-toolbar color="primary">
     <ion-title>
       Login
     </ion-title>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
-<ion-content [fullscreen]="true">
-  <ion-card>
-    <ion-avatar class="ion-text-center">
-      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" />
-    </ion-avatar>
-    <ion-card-header>
-     
-      <ion-card-title class="ion-text-center">LOGIN</ion-card-title>
+<ion-content  [fullscreen]="true" >
+  <ion-grid>
+  <ion-row >
+    <ion-col class="ion-margin-top">
+      <ion-avatar style="margin: 0 auto;" >
+        <ion-icon name="person-circle-outline" style="font-size: 88px;"></ion-icon>
+        <!-- <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" /> -->
+      </ion-avatar>
+      
+    </ion-col>
+  </ion-row>
+  <ion-card style="margin-top:130px;">
+     <ion-card-header>
+     <ion-card-title class="ion-text-center">LOGIN</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-grid>
+     
         <ion-row>
           <ion-col>
             <ion-item>
@@ -39,14 +45,33 @@
             </ion-item>
          </ion-col>
         </ion-row>
-        <ion-row>
-          <io-col>
-            
-          </io-col>
+        <ion-row class="ion-justify-content-center">
+          <ion-button shape="round" [routerLink]="['/reset-paasword']">LOGIN</ion-button>
+         
         </ion-row>
-      </ion-grid>
+        <ion-row class="ion-justify-content-center">
+          <ion-text>
+            forgot password
+          </ion-text>
+        </ion-row>
+     
     </ion-card-content>
+  
   </ion-card>
+  <ion-row class="ion-justify-content-center">
+    <ion-col>
+      <ion-text>Don't have an Account</ion-text>
+    </ion-col>
+  </ion-row>
+  <ion-row class="ion-justify-content-center">
+    
+    <ion-col>
+     
+      <ion-button shape="round" style="margin: 0 auto;" [routerLink]="['/register']">Register</ion-button>
+    </ion-col>
+  </ion-row>
+  
+</ion-grid>
 </ion-content>
 <!-- <ion-content [fullscreen]="true">
 <ion-card class=".ion-margin-top" style="
