new screen added

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,9 +1,5 @@
-<ion-header [translucent]="true">
-  <!-- <ion-toolbar color="primary">
-    <ion-title>
-      Login
-    </ion-title>
-  </ion-toolbar> -->
+<!-- <ion-header [translucent]="true">
+ 
 </ion-header>
 <ion-content  [fullscreen]="true" >
   <ion-grid>
@@ -11,7 +7,7 @@
     <ion-col class="ion-margin-top">
       <ion-avatar style="margin: 0 auto;" >
         <ion-icon name="person-circle-outline" style="font-size: 88px;"></ion-icon>
-        <!-- <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" /> -->
+     
       </ion-avatar>
       
     </ion-col>
@@ -72,35 +68,37 @@
   </ion-row>
   
 </ion-grid>
-</ion-content>
-<!-- <ion-content [fullscreen]="true">
-<ion-card class=".ion-margin-top" style="
-margin-top: 150px; padding-bottom: 20px;">
-  
-  <ion-header class="ion-no-border">
-    <ion-toolbar>
-      <ion-title class="ion-text-center">Login</ion-title>
-    </ion-toolbar>
-  
-  </ion-header>
-
-  <ion-item>
-    <ion-label position="floating">Mobile no:</ion-label>
-    <ion-input placeholder="Enter Number"></ion-input>
-  </ion-item>
-
- 
-  <ion-button style="
-  /* padding-top: 15px; */
-  margin-top: 30px;
-  margin-left: 120px;
-" [routerLink]="['/otp']">Send OTP</ion-button>
-
-<ion-input  style="margin-left: 90px;">Don't have an account</ion-input>
-<ion-input style="margin-left: 130px;
-color: rgb(92, 92, 228); font-weight: bold;">Register</ion-input>
-
-
-</ion-card>
 </ion-content> -->
-
+<ion-content>
+  <div class="login-section ion-padding">
+    <div class="heading ion-padding">
+      <h1>Welcome Back !!</h1>
+      <p>log in to continue</p>
+    </div>
+    <div class="login-form ion-padding">
+      <div class="form-input">
+        <ion-icon class ="icon" name="mail-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email"></ion-input>
+        </ion-item>
+      </div>
+      <div class="form-input">
+        <ion-icon  class ="icon" name="lock-closed-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input type="password" #mysecretpassword></ion-input>
+          <ion-icon id ="end" slot="end" name="eye-outline" #eye class="ion-margin-top"
+          (click)="togglePassword(mysecretpassword,eye)"></ion-icon>
+        </ion-item>
+      </div>
+    </div>
+    <div class="action-button ion-padding">
+      <ion-button size="large" class="login-button" [routerLink]="['/tabs/tab1']">Log In</ion-button>
+    <p><a routerLink="/forgot-password">Forgot password ?</a></p>
+   
+    <ion-button  class="signup-button" size="large" fill="outline" [routerLink]="['/register']">Register</ion-button>
+    </div>
+  </div>
+  </ion-content>
+  
