--- a/src/app/auth/reset-password/reset-password.page.scss
+++ b/src/app/auth/reset-password/reset-password.page.scss
@@ -1,10 +1,11 @@
 ion-content{
-    --background:linear-gradient(#04767a , #00cdac);
+    --background:linear-gradient(#04767a , #3dc2ff);
    
    
 }
-.login-section{
-    height: 74vh;
+
+.reset-section{
+    height: 100vh;
     width: 100%;
     max-width: 500px;
     background: #fff;
@@ -13,11 +14,11 @@ ion-content{
     bottom: 0;
     position: fixed;
     margin: auto;
-    border-top-left-radius:46px ;
-    border-top-right-radius:46px ;
+    // border-top-left-radius:46px ;
+    // border-top-right-radius:46px ;
 
     .heading{
-        margin-top: 20px;
+        margin-top: 60px;
         h1{
             font-size: 1.6rem;
             font-weight: bolder;
@@ -28,10 +29,11 @@ ion-content{
             color: #7b7b7b;
         }
     }
-    .login-form{
+    .reset-form{
+        margin-top: -20px;
         .form-input{
             position: relative;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
             ion-item::part(native){
                 padding-left: 0;
             }
@@ -59,8 +61,8 @@ ion-content{
     }
     .action-button{
         text-align: center;
-        .login-button{
-            --background:#02aab0;
+        .reset-button{
+            --background:#3dc2ff;
             width: 100%;
             font-weight: bold;
         }
@@ -70,14 +72,7 @@ ion-content{
             font-size: 1rem;
             color: #7b7b7b;
         }
-        .signup-button{
-            --border-color:#b4b4b4;
-            color: #000000;
-            font-weight: bold;
-            margin-top: 30px;
-            width: 100%;
-
-        }
+       
     }
 
 }
