--- a/src/app/auth/forgot-password/forgot-password.page.html
+++ b/src/app/auth/forgot-password/forgot-password.page.html
@@ -1,19 +1,35 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>
+    Back
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
- <div class="header">
-   <h3>Welcome Back, <span id="user-name">Yogita</span></h3>
-   <h1>Please Login <br> to Continue</h1>
- </div>
- <div class="form">
-   <ion-input type="email" placeholder="Email" value="singlayogita0@gmail.com"></ion-input>
-   <ion-input type="password" placeholder="Password"></ion-input>
- </div>
-
- <div class="button" routerLink="/reset-password">
-   Login <ion-icon name="chevron-forward-outline"></ion-icon>
+<div class="reset-section ion-padding">
+  <div class="heading ion-padding">
+    
+   
+    <h1>Forgot Password</h1>
+    <p>Enter the email associated with your account and we will send an email with instruction to reset your password</p>
+  </div>
+  <div class="reset-form ion-padding">
+    <div class="form-input">
+      <ion-icon name="mail-outline"></ion-icon>
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input type="email"></ion-input>
+      </ion-item>
+    </div>
+   
+  </div>
+  <div class="action-button ion-padding">
+    <ion-button size="large" class="reset-button" [routerLink]="['/reset-password']">Confirm</ion-button>
+ 
+  
+  </div>
 </div>
- <div class="footer">
- <h3 routerLink="/register">Don't have an account? <span>Sign up</span></h3>
- </div>
-
-
 </ion-content>
