--- a/src/app/auth/forgot-password/forgot-password.page.scss
+++ b/src/app/auth/forgot-password/forgot-password.page.scss
@@ -1,74 +1,78 @@
 ion-content{
-    // --background:linear-gradient(#f7bc5e , #084670);
-    --background:linear-gradient(#009dae , #7df3e7);
+    --background:linear-gradient(#04767a , #3dc2ff);
+   
+   
+}
 
+.reset-section{
+    height: 100vh;
+    width: 100%;
+    max-width: 500px;
+    background: #fff;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    margin: auto;
+    // border-top-left-radius:46px ;
+    // border-top-right-radius:46px ;
 
-    .header{
-        padding: 0 12vw;
-        margin-top: 5em;
-        color: #fff;
-        h3{
-            font-size: 1.4rem;
-            font-weight: 600;
-            color:#084670;
-            span{
-                color: #fff;
-            }
-        }
+    .heading{
+        margin-top: 60px;
         h1{
-            font-size: 2.2rem;
-            font-weight: 400;
+            font-size: 1.6rem;
+            font-weight: bolder;
         }
-
-
-    }
-    .form{
-        padding: 0 12vw;
-        margin-top: 70px;
-        ion-input{
-            --background:#ff9999;
-            --padding-start: 33px;
-            height: 55px;
-            border-radius: 25px;
-            margin-bottom: 22px;
-            --placeholder-color:#ffffff;
-            --color:#fff
+        p{
+            margin-top: 20px;
+            font-size: 1rem;
+            color: #7b7b7b;
         }
     }
-    .button{
-        width: 50vw;
-        background-color: #ff7272;
-        margin-top:100px ;
-        padding: 20px;
-        border-top-right-radius: 30px;
-        border-bottom-right-radius: 30px;
-        display: flex;
-        align-items: center;
-        font-size: 1.2rem;
-        font-weight: 500;
-        justify-content: flex-end;
-        color: #fff;
-        ion-icon{
-            margin-left: 30px;
-            color: #fff;
-        }
-    }
-    .footer{
-        color: #fff;
-        padding: 0 12vw;
-        margin-top: 100px;
-        text-align: center;
-        h3{
-            font-size: 1.1rem;
-            font-weight: 400;
-            span{
-                font-size: 1.2rem;
-                color: #ee552b;
-                font-weight: 500;
+    .reset-form{
+        margin-top: -20px;
+        .form-input{
+            position: relative;
+            margin-bottom: 8px;
+            ion-item::part(native){
+                padding-left: 0;
             }
-
+            ion-icon{
+                position: absolute;
+                top: 17px;
+                z-index: 2;
+                font-size: 1.2rem;
+                left: 5px;
+            }
+            ion-label{
+                position: absolute;
+                margin-left: 35px;
+                font-weight: bolder;
+                font-size: 0.8rem;
+                top:3px
+            }
+            ion-input{
+                font-size: 0.9rem;
+                --padding-start:36px;
+                --padding-top:36px;
+                color:#7b7b7b
+            }
         }
     }
+    .action-button{
+        text-align: center;
+        .reset-button{
+            --background:#3dc2ff;
+            width: 100%;
+            font-weight: bold;
+        }
 
+        p{
+            margin-top: 15px;
+            font-size: 1rem;
+            color: #7b7b7b;
+        }
+       
+    }
 
 }
