--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -1,3 +1,90 @@
-.ion-margin-top{
-    margin-top: 40px;
-}	
+// .ion-margin-top{
+//     margin-top: 40px;
+// }	
+
+ion-content{
+    --background:linear-gradient(#04767a , #3dc2ff);
+   
+   
+}
+.login-section{
+    height: 75vh;
+    width: 100%;
+    max-width: 500px;
+    background: #fff;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    margin: auto;
+    border-top-left-radius:46px ;
+    border-top-right-radius:46px ;
+
+    .heading{
+        margin-top: 20px;
+        h1{
+            font-size: 1.6rem;
+            font-weight: bolder;
+        }
+        p{
+            margin-top: 20px;
+            font-size: 1rem;
+            color: #7b7b7b;
+        }
+    }
+    .login-form{
+        margin-top: -20px;
+        .form-input{
+            position: relative;
+            margin-bottom: 8px;
+            ion-item::part(native){
+                padding-left: 0;
+            }
+            .icon{
+                position: absolute;
+                top: 17px;
+                z-index: 2;
+                font-size: 1.2rem;
+                left: 5px;
+
+               
+            }
+            ion-label{
+                position: absolute;
+                margin-left: 35px;
+                font-weight: bolder;
+                font-size: 0.8rem;
+                top:3px
+            }
+            ion-input{
+                font-size: 0.9rem;
+                --padding-start:36px;
+                --padding-top:36px;
+                color:#7b7b7b
+            }
+        }
+    }
+    .action-button{
+        text-align: center;
+        .login-button{
+            --background:#3dc2ff;
+            width: 100%;
+            font-weight: bold;
+        }
+
+        p{
+            margin-top: 15px;
+            font-size: 1rem;
+            color: #7b7b7b;
+        }
+        .signup-button{
+            --border-color:#b4b4b4;
+            color: #000000;
+            font-weight: bold;
+           
+            width: 100%;
+
+        }
+    }
+
+}
