--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
@@ -61,4 +61,70 @@
   </ion-grid>
  
 </ion-content>
-
+ -->
+ <ion-content>
+  <div class="register-section ion-padding">
+    <div class="heading ion-padding">
+      <h1>Register Account</h1>
+      <!-- <p>log in to continue</p> -->
+    </div>
+    <div class="register-form ion-padding">
+      <div class="form-input">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Seller Name:</ion-label>
+          <ion-input type="text"></ion-input>
+        </ion-item>
+      </div>
+      <div class="form-input">
+        <ion-icon name="business-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Business Name:</ion-label>
+          <ion-input type="text"></ion-input>
+        </ion-item>
+      </div>
+      <div class="form-input">
+        <ion-icon name="business-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Business Type</ion-label>
+          <ion-input type="text" placeholder="Grocery store, Garments"></ion-input>
+        </ion-item>
+      </div>
+      <div class="form-input">
+        <ion-icon name="mail-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email"></ion-input>
+        </ion-item>
+      </div>
+      <div class="form-input">
+        <ion-icon name="call-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Whatsapp Number</ion-label>
+          <ion-input type="tel"></ion-input>
+        </ion-item>
+      </div>
+      <div class="form-input">
+        <ion-icon name="lock-closed-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+      </div>
+     
+      <div class="form-input">
+        <ion-icon name="location-outline"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Store Location</ion-label>
+          <ion-input type="text"></ion-input>
+        </ion-item>
+      </div>
+    </div>
+    <div class="action-button ion-padding">
+      <ion-button  class="register-button" [routerLink]="['/tabs/tab1']">Register</ion-button>
+    <p>Already have an account</p>
+    <ion-button  class="login-button"  fill="outline" [routerLink]="['/login']">Log In</ion-button>
+    </div>
+  </div>
+  </ion-content>
+  
