--- a/src/app/auth/reset-password/reset-password.page.html
+++ b/src/app/auth/reset-password/reset-password.page.html
@@ -1,29 +1,42 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>
+    Back
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
-<div class="login-section ion-padding">
+<div class="reset-section ion-padding">
   <div class="heading ion-padding">
-    <h1>Welcome Yogita !!</h1>
-    <p>Sign in to continue</p>
+    
+ 
+    <h1>Reset Password</h1>
+    <p>Your new Password must be different from previous used password</p>
   </div>
-  <div class="login-form ion-padding">
+  <div class="reset-form ion-padding">
     <div class="form-input">
-      <ion-icon name="mail-outline"></ion-icon>
+      <ion-icon name="lock-closed-outline"></ion-icon>
       <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input type="email"></ion-input>
+        <ion-label position="floating">New password</ion-label>
+        <ion-input type="password"></ion-input>
       </ion-item>
     </div>
     <div class="form-input">
       <ion-icon name="lock-closed-outline"></ion-icon>
       <ion-item>
-        <ion-label position="floating">Password</ion-label>
+        <ion-label position="floating">Confirm Password</ion-label>
         <ion-input type="password"></ion-input>
       </ion-item>
     </div>
+   
   </div>
   <div class="action-button ion-padding">
-    <ion-button size="large" class="login-button" [routerLink]="['/tabs/tab1']">Log in</ion-button>
-  <p>Forgot password</p>
-  <ion-button  class="signup-button" size="large" fill="outline">sign in</ion-button>
+    <ion-button size="large" class="reset-button" [routerLink]="['/login']">Reset Password</ion-button>
+ 
+  
   </div>
 </div>
 </ion-content>
