--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,74 +1,4 @@
-<!-- <ion-header [translucent]="true">
- 
-</ion-header>
-<ion-content  [fullscreen]="true" >
-  <ion-grid>
-  <ion-row >
-    <ion-col class="ion-margin-top">
-      <ion-avatar style="margin: 0 auto;" >
-        <ion-icon name="person-circle-outline" style="font-size: 88px;"></ion-icon>
-     
-      </ion-avatar>
-      
-    </ion-col>
-  </ion-row>
-  <ion-card style="margin-top:130px;">
-     <ion-card-header>
-     <ion-card-title class="ion-text-center">LOGIN</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-     
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">
-               Email
-              </ion-label>
-              <ion-input></ion-input>
-                <ion-icon slot="end" name="mail-outline" class="ion-margin-top"></ion-icon>
-            </ion-item>
-           </ion-col>
-        </ion-row>
-        <ion-row>
-        
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Password</ion-label>
-              <ion-input type="password"  #mysecretpassword>
-              </ion-input>
-              <ion-icon slot="end" name="eye-outline" #eye class="ion-margin-top"
-             (click)="togglePassword(mysecretpassword,eye)"></ion-icon>
-            </ion-item>
-         </ion-col>
-        </ion-row>
-        <ion-row class="ion-justify-content-center">
-          <ion-button shape="round" [routerLink]="['/reset-paasword']">LOGIN</ion-button>
-         
-        </ion-row>
-        <ion-row class="ion-justify-content-center">
-          <ion-text>
-            forgot password
-          </ion-text>
-        </ion-row>
-     
-    </ion-card-content>
-  
-  </ion-card>
-  <ion-row class="ion-justify-content-center">
-    <ion-col>
-      <ion-text>Don't have an Account</ion-text>
-    </ion-col>
-  </ion-row>
-  <ion-row class="ion-justify-content-center">
-    
-    <ion-col>
-     
-      <ion-button shape="round" style="margin: 0 auto;" [routerLink]="['/register']">Register</ion-button>
-    </ion-col>
-  </ion-row>
-  
-</ion-grid>
-</ion-content> -->
+
 <ion-content>
   <div class="login-section ion-padding">
     <div class="heading ion-padding">
@@ -80,24 +10,30 @@
         <ion-icon class ="icon" name="mail-outline"></ion-icon>
         <ion-item>
           <ion-label position="floating">Email</ion-label>
-          <ion-input type="email"></ion-input>
+          <ion-input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" required></ion-input>
         </ion-item>
       </div>
       <div class="form-input">
         <ion-icon  class ="icon" name="lock-closed-outline"></ion-icon>
         <ion-item>
           <ion-label position="floating">Password</ion-label>
-          <ion-input type="password" #mysecretpassword></ion-input>
+          <ion-input type="password" #mysecretpassword [(ngModel)]="password" [ngModelOptions]="{standalone: true}"
+          required ></ion-input>
           <ion-icon id ="end" slot="end" name="eye-outline" #eye class="ion-margin-top"
           (click)="togglePassword(mysecretpassword,eye)"></ion-icon>
         </ion-item>
       </div>
     </div>
     <div class="action-button ion-padding">
-      <ion-button size="large" class="login-button" [routerLink]="['/tabs/tab1']">Log In</ion-button>
+      <!-- <ion-button size="large" class="login-button" (click)="login"
+      [routerLink]="['/tabs/tab1']">Log In</ion-button> -->
+      <!-- <ion-button expand="block" shape="round">Block Button</ion-button> -->
+      <ion-button class="login-button"
+       expand="block"   [disabled]="!email || !password" >Log In</ion-button>
     <p><a routerLink="/forgot-password">Forgot password ?</a></p>
    
-    <ion-button  class="signup-button" size="large" fill="outline" [routerLink]="['/register']">Register</ion-button>
+    <ion-button  class="signup-button"
+    expand="block" fill="outline" [routerLink]="['/register']">Register</ion-button>
     </div>
   </div>
   </ion-content>
