--- a/src/app/auth/register/register.page.scss
+++ b/src/app/auth/register/register.page.scss
@@ -4,7 +4,7 @@ ion-content{
    
 }
 .register-section{
-    height: 95%;
+    height: 90%;
     width: 100%;
     max-width: 500px;
     background: #fff;
@@ -13,14 +13,15 @@ ion-content{
     bottom: 0;
     position: fixed;
     margin: auto;
-    border-top-left-radius:46px ;
-    border-top-right-radius:46px ;
+    border-top-left-radius:50px ;
+    border-top-right-radius:50px ;
 
     .heading{
      
         h1{
             font-size: 1.6rem;
             font-weight: bolder;
+            margin-top: 5px;
         }
         p{
           
@@ -29,7 +30,7 @@ ion-content{
         }
     }
     .register-form{
-        margin-top: -30px;
+        margin-top: -20px;
         .form-input{
             position: relative;
            
@@ -46,7 +47,7 @@ ion-content{
             ion-label{
                 position: absolute;
                 margin-left: 35px;
-                font-weight: bolder;
+                // font-weight: bolder;
                 font-size: 0.8rem;
                 top:3px
             }
