--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,14 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.hydrated {
+    visibility: inherit;
+    text-transform: none;
+}
+ion-header{
+    font-family: "Poppins";
+}
+ion-content{
+    font-family: "Poppins";
+}
